--- a/client/src/assets/styles/ProductCard.module.css
+++ b/client/src/assets/styles/ProductCard.module.css
@@ -3,7 +3,7 @@
    height: 400px;
    border: solid 1px gray;
    border-radius: 15px;
-   margin: 10px 10px;
+   
    overflow: hidden;
 }
 .container:hover{
@@ -31,6 +31,8 @@
    width: 100%;
    height: 60%;
    background-color: #fff;
+   display: flex;
+   justify-content: center;
 }
 .img{
    max-height: 100%;
@@ -39,7 +41,11 @@
 .actions{
    width: 100%;
    height: 25%;
-   background-color: gray;
+   background-color: rgb(221, 215, 215);
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
 
 .btn{
