--- a/client/src/assets/styles/ProductCard.module.css
+++ b/client/src/assets/styles/ProductCard.module.css
@@ -1,9 +1,9 @@
 .container{
-   width: 300px;
-   height: 400px;
+   width: 250px;
+   height: 300px;
    border: solid 1px gray;
    border-radius: 15px;
-   
+   flex-wrap: wrap;
    overflow: hidden;
 }
 .container:hover{
