cambiando diseño de ProductCard

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   padding-top: 80px;
   height: 88vh;
   display: flex;
@@ -39,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
