--- a/client/src/assets/styles/Details.module.css
+++ b/client/src/assets/styles/Details.module.css
@@ -1,62 +1,107 @@
 .container{
-    width: 300px;
-    height: 400px;
-    border: solid 1px gray;
-    border-radius: 15px;
-    margin: 10px 10px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
- }
- .container:hover{
-    transform: scale(1.05);
- }
- 
- .namecont{
-    width: 100%;
-    height: 15%;
-    background-color: blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color:#fff;
-    flex-shrink: 1;
-    flex-wrap: wrap;
- }
- 
- .name{
-    width: 95%;
- }
- 
- .imgcont{
-    width: 300px;
-    height: 60%;
-    background-color: rgb(255, 5, 5);
-    /* display: flex;
-    justify-content: center; */
- }
- .img{
-    max-height: 100%;
- }
- 
- .actions{
-    width: 100%;
-    height: 25%;
-    background-color: gray;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
- }
- 
- .btn{
-     background-color: #FFD803;
-     width: 200px;
-     height: 40px;
-     border: solid 1px gray;
-     border-radius: 15px;
-     margin-top: 5px;
- }
- 
- .btn:hover{
-    background-color: #e2c105;
- }
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
+   /* background-color: #ededed; */
+   background-color: rgb(218, 211, 193);
+   padding: 30px;
+   margin-top: 100px;
+}
+.container .data{
+   /**/ display: flex;
+   flex-direction: row;
+   justify-content: space-around; 
+   height: 700px;
+   padding: 2%;
+}
+.imgcontainer{
+   overflow: hidden;
+   box-shadow: 3px 3px 15px black;
+}
+.imgcontainer img{
+   width: 100%;
+   height: 100%;
+}
+.subcontainer{
+   border-radius: 15px;
+   width: 47%;
+   background-color: #fff;
+}
+.details{
+   display: flex;
+   flex-direction: column; 
+   align-items: center;
+   justify-content: center;
+   border: solid 0.5px gray;
+}
+.details input[type=number]{
+border: solid 1px black;  
+width: 150px; 
+height: 30px;
+text-align: right;
+padding: 0px 10px;
+}
+.details input[type=number]::-webkit-inner-spin-button {
+   opacity: 1;
+   margin-left: 5px;
+}
+.btnfav{
+   font-size: 35px;
+   color:deepskyblue;
+   position: absolute;
+   top: 20%;
+   right: 8%;
+   width: 50px;
+   height: 50px;
+   background-color: transparent;
+
+}
+.prodname{
+   margin-bottom: 5px;
+}
+.prodprice{
+   font-size: 40px;
+   margin-bottom: 10px;
+}
+.grupcount{
+   width: 300px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 15px;
+}
+.grupcount input{
+   margin-left: 15px;
+}
+.btn{
+   background-color: #FFD803;
+   width: 200px;
+   height: 45px;
+   border: solid 1px gray;
+   border-radius: 15px;
+   margin-top: 20px;
+}
+.titlepay{
+   margin-top: 50px;
+}
+.payment{/* imagenes */
+   width: 100px;
+   height: 30px;
+   margin-top: 30px;
+   box-shadow: 2px 2px 2px;
+}
+
+.desc{
+   padding: 2%;
+   display: inline-block;
+   background-color: rgb(218, 211, 193);
+   text-align: left;
+   border-radius: 0 0 15px 15px;
+}
+.desc h3{
+   text-align: center;
+   margin-top: 20px;
+} 
+.desc p{
+   padding: 40px 10px 0px 40px;
+}
