trabajando en detail products

--- a/client/src/assets/styles/Details.module.css
+++ b/client/src/assets/styles/Details.module.css
@@ -22,6 +22,38 @@
    width: 100%;
    height: 100%;
 }
+
+.images{
+   display: flex;
+   width: 300%;
+   height: 100%;
+}
+.image{
+   width: 100%;
+   height: 100%;
+}
+
+.btnimg{
+   position: relative;
+   width: 30px;
+   height: 70px;
+   background-color: #FFD803;
+   font-size: 35px;
+}
+.btnimg:hover{
+   cursor: pointer;
+   background-color: #d1b410;
+}
+
+.imgleft{
+   top: -55%;
+   left: 2%;
+}
+
+.imgrigth{
+   top: -55%;
+   left: 87%;
+}
 .subcontainer{
    border-radius: 15px;
    width: 47%;
