--- a/client/src/assets/styles/Details.module.css
+++ b/client/src/assets/styles/Details.module.css
@@ -19,8 +19,11 @@
    box-shadow: 3px 3px 15px black;
 }
 .imgcontainer img{
-   width: 100%;
+   /* width: 100%; */
    height: 100%;
+}
+.default-nav{
+   display: none;
 }
 
 .images{
