--- a/client/src/assets/styles/Register.module.css
+++ b/client/src/assets/styles/Register.module.css
@@ -1,11 +1,12 @@
 .container{
-    min-height: 90vh;
+    min-height: 100vh;
     background-color: rgb(238, 237, 213);
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 130px;
 }
 .form{
     background-color: #272343;
@@ -30,13 +31,23 @@
     margin-top: 5px;
     border-radius: 10px;
 }
+.error{
+    width: 80%;
+    background-color: red;
+    text-align: center;
+    height: auto;
+    min-height: 25px;
+    line-height: 20px;
+}
 
 .formGTerm{
     display: flex;
     justify-content: center;
 }
-.formGTerm input{
+.formGTerm input[type="checkbox"]{
     margin-right: 10px;
+    width: 15px;
+    height: 15px;
 }
 
 .btn{
