--- a/client/src/assets/styles/Details.module.css
+++ b/client/src/assets/styles/Details.module.css
@@ -34,6 +34,8 @@
 .image{
    width: 100%;
    height: 100%;
+   display: flex;
+   justify-content: center;
 }
 
 .btnimg{
@@ -68,6 +70,7 @@
    align-items: center;
    justify-content: center;
    border: solid 0.5px gray;
+   padding: 0 20px;
 }
 .details input[type=number]{
 border: solid 1px black;  
@@ -95,8 +98,12 @@ padding: 0px 10px;
    margin-bottom: 5px;
 }
 .prodprice{
-   font-size: 40px;
+   font-size: 30px;
    margin-bottom: 10px;
+}
+
+.prodprice span{
+   font-size: 20px;
 }
 .grupcount{
    width: 300px;
@@ -140,3 +147,4 @@ padding: 0px 10px;
 .desc p{
    padding: 40px 10px 0px 40px;
 }
+
