--- a/client/src/assets/styles/Home.module.css
+++ b/client/src/assets/styles/Home.module.css
@@ -24,3 +24,20 @@
    flex-wrap: wrap;
    /* padding: 150px 40px 30px 40px; */
 }
+
+.notfound {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   /* height: 85vh; */
+   width: 100%;
+}
+
+.imgfound{
+   width: 500px;
+}
+
+.notfound p{
+   font-size: 50px;
+   text-align: center;
+}
