--- a/client/src/assets/styles/Filters.module.css
+++ b/client/src/assets/styles/Filters.module.css
@@ -1,13 +1,15 @@
 .container{
    width: 100%;
-   height: 80px;
+   height: 100px;
    background-color: rgb(221, 210, 172);
-   /* margin-top: 100px; */
+   position: fixed;
    margin-bottom: 30px;
    border-bottom: solid 2px gray;
    display: flex;
    justify-content: space-around;
-   align-items: center;
+   /* align-items: center; */
+   padding-top: 20px;
+   z-index: 100;
 }
 
 .container select{
