--- a/client/src/assets/styles/Home.module.css
+++ b/client/src/assets/styles/Home.module.css
@@ -4,7 +4,16 @@
    padding-top: 100px;
    background-color: rgb(230, 220, 189);
 }
-
+.pagination{
+   position: fixed;
+   z-index: 100;
+   width: 100%;
+   height: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   top:170px
+}
 .search{
    width: 100%;
    display: flex;
@@ -23,7 +32,7 @@
    justify-content: space-evenly;
    flex-shrink: 1;
    flex-wrap: wrap;
-   /* padding: 150px 40px 30px 40px; */
+   margin-top: 150px;
 }
 
 .notfound {
