resolviendo problemas estilos home

--- a/client/src/assets/styles/Home.module.css
+++ b/client/src/assets/styles/Home.module.css
@@ -33,7 +33,7 @@
    justify-content: space-evenly;
    flex-shrink: 1;
    flex-wrap: wrap;
-   /* margin-top: 150px; */
+   margin-top: 150px;
 }
 
 .notfound {
