--- a/client/src/assets/styles/ProductCard.module.css
+++ b/client/src/assets/styles/ProductCard.module.css
@@ -76,7 +76,11 @@
    /* top: -10px; */
    font-weight: 400;
    font-size: 30px;
+   margin-bottom: 10px;
+}
 
+.price span{
+   font-size: 20px;
 }
 
 .btn{
