--- a/client/src/assets/styles/CatForm.module.css
+++ b/client/src/assets/styles/CatForm.module.css
@@ -1,11 +1,14 @@
 .Background{
-    background-color: #fffffe;
+    background-color: rgb(230, 220, 189);
     display: flex;
     flex-direction: row;
     justify-content: center;
+    height: 100%;
+    width: 100vw;
 }
 
 .Container{
+    margin-top:120px;
     width: 500px;
     height: 400px;
     background-color: #272343;
