--- a/client/src/assets/styles/CatForm.module.css
+++ b/client/src/assets/styles/CatForm.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    height: 100%;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -43,6 +43,17 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+.Input{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.Input span{
+    margin-top: 5px;
+    margin-bottom: 50px;
+    color: white;
+    background-color: rgb(251, 26, 26);
 }
 
 input{
