--- a/client/src/assets/styles/login.module.css
+++ b/client/src/assets/styles/login.module.css
@@ -1,48 +1,84 @@
 /* borrar cuando termines */
-.navbar{
+
+
+.container{
+    /* padding-top: 150px; */
     width: 100%;
-    height: 80px;
-
-    background-color: #2D334A;
-    position: fixed;
-    top: 0;
-}
-
-.formContainer{
-    padding-top: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    background-color: rgb(230, 220, 189);
 }
-
+.wrapLogin{
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    background-color: white;
+    width: 400px;
+    border-radius: 10px;
+}
 .form{
-    width: 60%;
-    height: 450px;
+    width: 100%;
+    height: 550px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    
+    /* border: solid 2px black; */
 }
 
+
+
+.title{
+    /* font-family: Raleway-Black; */
+    font-size: 30px;
+    text-align: center;
+    color: black;
+    text-transform: uppercase;
+    padding-bottom: 30px;
+}
+.formGroup{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .input{
-    width: 75%;
-    height: 35px;
-    padding-left: 7px;
-    font-size: 1.5em;
-    border: 2px solid rgb(41, 41, 41);
-    border-radius: 6px;
-    box-sizing: border-box;
+    width: 100%;
+    height: 62px;
+    padding-left: 50px;
+    padding-right: 10px;
+    color: #686868;
+    font-size: 18px;
+    background-color: #e6e6e6;;
+}
+.iconInput{
+    position: relative;
+    top: -50%;
+    left: -50%;
+}
+
+.containerbuttons{
+    margin-top: 20px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .alternativeSubmit{
-    width: 40%;
-    height: 10%;
-
+    width: 50px;
+    height: 50px;
+    background-color: white;
+/* 
     border-radius: 10px;
     border: 0;
     background-color: white;
     transition: background-color .3s;
-    box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 3px 7px 1px rgba(0, 0, 0, 0.4); */
 
 }
 
@@ -57,14 +93,14 @@
     transition: background-color .3s;
 }
 
-.container{
+/* .container{
     width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
+} */
 
 .icon{
     width: 35px;
@@ -96,18 +132,14 @@
     transition: background-color .3s;
 }
 
-.title{
-    font-size: 2em;
-    margin: 0;
-    text-align: center;
-}
+
 
 .link{
-    color: rgb(0, 117, 189);
+    color: #0000EE;
     text-decoration: none;
 }
 
-@media (min-width: 619px) and (max-width: 1024px) {
+/* @media (min-width: 619px) and (max-width: 1024px) {
     .alternativeSubmit{
         width: 60%;
     }
@@ -194,4 +226,4 @@
         font-size: 1em;
         
     }
-}
+} */
