--- a/client/src/assets/styles/BrandForm.module.css
+++ b/client/src/assets/styles/BrandForm.module.css
@@ -1,24 +1,30 @@
-.Background{
+.Container{
     background-color: rgb(230, 220, 189);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100vw;
+    min-height: 100vh;
+    /* width: 100vw; */
+    padding: 0 50px;
+    padding-bottom: 50px;
 }
 
-.Container{
+.Form{
     margin-top:120px;
     width: 500px;
-    /* height: 100%; */
-    background-color: #272343;
+    height: 300px; /**/
+    background-color: #2D334A;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    margin-bottom: 60px;
 }
 
-.title{
+.Title{
     height: 100px;
     width: 500px;
     display: flex;
@@ -36,79 +42,26 @@
 }
 
 
-.Home{
-    display: flex;
-    width: 500px;
-    height: 100px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.Input{
+.formGroup{
     display:flex;
     flex-direction: column;
+    width: 70%;
 }
 
-.Input span{
+
+.formGroup span{
     margin-top: 5px;
     margin-bottom: 50px;
     color:white;
     background-color: red;
     border-radius: 3px;
 }
-.SelectLink{
-    display: flex;
-    width: 500px;
-}
 
-.SelectLink ul{
-    height: all;
-    width: all;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: stretch;
-
-}
-
-.SelectLink ul li{
-    display: flex;
-    /* padding-bottom: 5px; */
-    margin: 10px;
-    height: 30px;
-    background-color: #ffd803;
-    border-radius: 2px;
-    color: black;
-    justify-content: center;
-}
-
-
-.Delete{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    height: 13px;
-    width: 13px;
-    border-radius: 50%;
-    background-color: white;
-}
-.Delete:hover{
-    background-color: red;
-}
-
-input{
-    height: 30px;
+.formGroup input{
+    height: 40px;
     border-radius: 3px;
-}
-
-select{
-    height: 30px;
-    border-radius: 3px;
-
+    padding: 0 20px;
+    text-align: center;
 }
 
 button{
@@ -116,8 +69,4 @@ button{
     height: 30px;
     border-radius: 3px;
     
-}
-h2{
-    color: #fffffe;
-    font-size: xx-large;
 }
