--- a/client/src/assets/styles/CategoryForm.module.css
+++ b/client/src/assets/styles/CategoryForm.module.css
@@ -4,87 +4,70 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
+    padding: 0 50px;
     
 }
 
 .Form{
     margin-top:120px;
     width: 500px;
-    height: 400px;
-    background-color: #272343;
+    height: 300px; /**/
+    background-color: #2D334A;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    /* padding-top: 50px; */
+    margin-bottom: 60px;
     
 }
 
-.title{
-    height: 100px;
+.Title{
+    /* height: 100px; */
     width: 500px;
     display: flex;
     justify-content: center;
+    
 }
 
-.InputSelect{
-    width: 500px;
-    height: 300px;
-    display: flex;
+.formGroup{
+    display:flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+    width: 70%;
     
 }
 
-
-.Home{
-    display: flex;
-    width: 500px;
-    height: 100px;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-.Input{
+.formGroup{
     display: flex;
     flex-direction: column;
     margin-top: 20px;
 }
-.Input span{
+.formGroup span{
     margin-top: 5px;
     margin-bottom: 50px;
-    color: white;
-    background-color: rgb(251, 26, 26);
-}
-
-input{
-    height: 30px;
+    color:white;
+    background-color: red;
     border-radius: 3px;
-
 }
 
-select{
-    height: 30px;
+.formGroup input{
+    height: 40px;
     border-radius: 3px;
-
+    padding: 0 20px;
+    text-align: center;
 }
 
-button{
+
+.formGroup button{
     background-color: #ffd803;
     height: 30px;
+    /* width: 100px; */
     border-radius: 3px;
     
 }
-h2{
-    color: #fffffe;
-    font-size: xx-large;
-}
 
-.Form + div{
-    width: 600px;
-    margin-top: 30px;
-    margin-bottom: 50px;
-}
+
 .btnEdit{
     width: 30px;
     height: 30px;
